# capstone-project-2

./: .env.example  .gitignore  main.py  pyproject.toml
data/: DICTIONARY.md
data/schemas/: old-bird-search-continuation.json
src/: config.py
src/db/: __init__.py  database.py  pb_warehouse.py
src/models/: __init__.py  tweet.py  tweetUser.py  user.py
src/scraper/: RapidApi.py  Tweety.py  Twikit.py  __init__.py
src/utils/: __init__.py  get_tweets_replies.py
