[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.3.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "polars>=1.30.0",
    "pydantic>=2.11.5",
    "pyrefly>=0.18.0",
    "tqdm>=4.67.1",
    "tweety-ns>=2.3.3",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "src",
]

[tool.uv.sources]
src = { workspace = true }
